@@ -1,1 +1,39 @@
 # Calendar Properties
+
+# CACHED_ITERATOR_FAST_FETCH / MAX_PRE_FETCH OPTION
+#
+# By enabling the option CACHED_ITERATOR_FAST_FETCH you
+# can define the numbers of pre fetched results with
+# the parameter MAX_PRE_FETCH.
+#
+# This means that MAX_PRE_FETCH results are gathered in one
+# SQL query instead of MAX_PRE_FETCH single SQL queries.
+# Normally higher values result in more performance if this
+# option is enabled.
+#
+# Default values
+# CACHED_ITERATOR_FAST_FETCH=true
+# MAX_PRE_FETCH=20
+
+
+
+# CHECK_AND_REMOVE_PAST_REMINDERS
+#
+# If this option is enabled no event is triggered
+# and no mail will be sent if the reminder is in
+# the past relative to the start date.
+#
+# Default value:
+# CHECK_AND_REMOVE_PAST_REMINDERS=true
+
+
+
+# CHECK_AND_AVOID_SOLO_REMINDER_TRIGGER_EVENTS
+#
+# This option prevents the trigger and mail sending
+# if only a reminder has been changed. If the application
+# should inform about each change no matter what has been
+# changed in the object this option should be disabled.
+#
+# Default value:
+# CHECK_AND_AVOID_SOLO_REMINDER_TRIGGER_EVENTS=true
