@@ -3,6 +3,9 @@
 # Test Servlet
 servlet/TestServlet:com.openexchange.tools.ajp13.TestServlet
 
+# Infostore Vista Home Basic
+infostore*:com.openexchange.webdav.Infostore
+
 servlet/webdav.ical:com.openexchange.webdav.ical
 servlet/webdav.vcard:com.openexchange.webdav.vcard
 servlet/webdav.version:com.openexchange.webdav.version
@@ -32,6 +35,7 @@ ajax/spellcheck:com.openexchange.ajax.SpellCheckServlet
 ajax/multiple:com.openexchange.ajax.Multiple
 ajax/quota:com.openexchange.ajax.Quota
 ajax/control:com.openexchange.ajax.ConfigJump
+ajax/file:com.openexchange.ajax.AJAXFile
 ajax/import*:com.openexchange.ajax.ImportServlet
 ajax/export*:com.openexchange.ajax.ExportServlet
 
